--- a/homeowner-upload.html
+++ b/homeowner-upload.html
@@ -34,7 +34,7 @@
         .logo {
             font-size: 2rem;
             font-weight: bold;
-            color: #667eea;
+            color: #2532EB;
             margin-bottom: 10px;
         }
         
@@ -45,7 +45,7 @@
         }
         
         .welcome-message {
-            color: #667eea;
+            color: #2532EB;
             font-size: 1.2rem;
             font-weight: 600;
             margin: 15px 0;
