--- a/homeowner-upload.html
+++ b/homeowner-upload.html
@@ -45,7 +45,7 @@
         }
         
         .welcome-message {
-            color: #2532EB;
+            color: #2C3E50;
             font-size: 1.2rem;
             font-weight: 600;
             margin: 15px 0;
