--- a/dashboard.html
+++ b/dashboard.html
@@ -719,7 +719,7 @@
             }
 
             const uploadToken = generateToken();
-            const uploadLink = `${SITE_URL}/homeowner-upload?token=${uploadToken}`;
+            const uploadLink = `${SITE_URL}/homeowner-upload.html?token=${uploadToken}`;
             
             // Create fields object with ONLY the fields that exist in Airtable
             // Map workflow values to Airtable dropdown options (with proper capitalization)
