--- a/waitlist/index.html
+++ b/waitlist/index.html
@@ -343,7 +343,7 @@
         /* Early Adopter Section */
         .early-adopter-section {
             padding: 80px 20px;
-            background: linear-gradient(135deg, #F3F4F6 0%, #F3F4F6 100%);
+            background: linear-gradient(135deg, #F3F4F6 0%, #764ba2 100%);
             color: white;
             text-align: center;
         }
