--- a/waitlist/index.html
+++ b/waitlist/index.html
@@ -343,8 +343,8 @@
         /* Early Adopter Section */
         .early-adopter-section {
             padding: 80px 20px;
-            background: linear-gradient(135deg, #F3F4F6 0%, #764ba2 100%);
-            color: black;
+            background: #F3F4F6%);
+            color: #6B7280;
             text-align: center;
         }
         
