--- a/waitlist/index.html
+++ b/waitlist/index.html
@@ -343,8 +343,8 @@
         /* Early Adopter Section */
         .early-adopter-section {
             padding: 80px 20px;
-            background: #F3F4F6%);
-            color: #6B7280;
+            background: #F3F4F6;
+            color: #1F2937;
             text-align: center;
         }
         
