--- a/waitlist/index.html
+++ b/waitlist/index.html
@@ -808,8 +808,8 @@
             <p style="margin-top: 15px;">Contact: hello@boltquotes.com | (281) 815-0688</p>
             
             <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
+                <a href="/privacy.html">Privacy Policy</a>
+                <a href="https://www.termsfeed.com/live/8ff96be6-23c2-40d4-9a20-e0596322f138">Terms of Service</a>
             </div>
         </div>
     </footer>
