--- a/waitlist/index.html
+++ b/waitlist/index.html
@@ -749,7 +749,7 @@
     <section class="final-cta" id="waitlist">
         <div class="container">
             <h2>Lock In $99/Month Before It's Gone</h2>
-            <p class="spots-remainingFooter">⏰ <span id="spotsRemainingFooter" class="loading">...</span>  of 100 Founding Member Spots Remaining</p>
+            <p class="spots-remaining">⏰ <span id="spotsRemainingFooter" class="loading">...</span>  of 100 Founding Member Spots Remaining</p>
             <p style="font-size: 1.2rem; margin-bottom: 30px;">
                 Join now. Get the product in 60 days. Pay nothing until launch.
             </p>
