--- a/quote-generator.html
+++ b/quote-generator.html
@@ -930,9 +930,9 @@
         };
 
         const AIRTABLE_TOKEN = 'AIRTABLE_PAT';
-        const BASE_ID = 'appMDzE57TJ4B2h79';
-        const PROJECTS_TABLE = 'tblPNJ7EUqqpuTn5h';
-        const PHOTOS_TABLE = 'tblI6YQVPe9yPYNhC';
+        const BASE_ID = 'applWK4PXoo86ajvD';
+        const PROJECTS_TABLE = 'tblhfewGPP306LVNX';
+        const PHOTOS_TABLE = 'tblQJwbhreZKxfJMI';
         
         let currentProject = null;
         let selectedAddons = [];
