Rename PHOTOS_TABLE constant for clarity

--- a/quote-generator.html
+++ b/quote-generator.html
@@ -932,7 +932,7 @@
         const AIRTABLE_TOKEN = 'AIRTABLE_PAT';
         const BASE_ID = 'applWK4PXoo86ajvD';
         const PROJECTS_TABLE = 'tblhfewGPP306LVNX';
-        const PHOTOS_TABLE = 'tblQJwbhreZKxfJMI';
+        const PHOTOS_TABLE = 'Photos';
         
         let currentProject = null;
         let selectedAddons = [];
